--- a/htmlfile.html
+++ b/htmlfile.html
@@ -1,7 +1,7 @@
 <!doctype html >
 <html>
 <head>
-<title>project</title>
+<title>manu</title>
 <link rel="stylesheet" href="stylesheet1.css">
 </head>
 <body>
